feat: makes the banner and services section responsive.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 col-one">
                     <div class="d-flex text-banner">
                         <h1 class="wow fadeInLeft"><b>Escolha sua comida <b class="color-primary">favorita</b>.</b></h1>
                         <p class="wow fadeInLeft delay-02s">
@@ -125,7 +125,7 @@
         <div class="background-servicos"></div>
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center mb-5 wow fadeIn">
+                <div class="col-12 col-one text-center mb-5 wow fadeIn">
                     <span class="hint-title">
                         <b>Serviços</b>
                     </span>
@@ -133,7 +133,7 @@
                         <b>Como são nossos serviços?</b>
                     </h1>
                 </div>
-                <div class="col-4 mb-5 wow fadeInUp">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 col-one mb-5 wow fadeInUp">
                     <div class="card-icon text-center">
                         <img src="./img/icone-pedido.svg" width="150" alt="" />
                     </div>
@@ -144,7 +144,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-4 mb-5 wow fadeInUp">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 col-one mb-5 wow fadeInUp">
                     <div class="card-icon text-center">
                         <img src="./img/icone-delivery.svg" width="250" alt="" />
                     </div>
@@ -155,7 +155,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-4 mb-5 wow fadeInUp">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 col-one mb-5 wow fadeInUp">
                     <div class="card-icon text-center">
                         <img src="./img/icone-qualidade.svg" width="250" alt="" />
                     </div>
