--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="background-cardapio"></div>
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center mb-5 wow fadeIn">
+                <div class="col-12 col-one text-center mb-5 wow fadeIn">
                     <span class="hint-title">
                         <b>Cardápio</b>
                     </span>
@@ -182,7 +182,7 @@
                         <b>Conheça o nosso cardápio</b>
                     </h1>
                 </div>
-                <div class="col-12 container-menu wow fadeInUp">
+                <div class="col-12 col-one container-menu wow fadeInUp">
                     <a id="menu-burgers" class="btn active btn-white btn-sm mr-3"
                         onclick="MenuFilterButtonsOnClick(this)" category="burgers">
                         <i class="fas fa-hamburger"></i>&nbsp; Burgers
@@ -212,12 +212,12 @@
                     </a>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 col-one">
                     <div class="row" id="itensCardapio">
 
                     </div>
                 </div>
-                <div class="col-12 text-center wow fadeInUp">
+                <div class="col-12 col-one text-center wow fadeInUp">
                     <a id="btnViewMore" class="btn btn-white btn-sm" onclick="menu.SeeMoreMenuItens()">Ver mais</a>
                 </div>
             </div>
@@ -229,14 +229,14 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-5 text-center">
+                <div class="col-5 no-mobile text-center">
                     <div class="card-depoimentos wow fadeIn"></div>
                     <div class="d-flex img-banner wow fadeInLeft delay-02s">
                         <img src="./img/pizzas.png" alt="">
                     </div>
                 </div>
 
-                <div class="col-7">
+                <div class="col-lg-7 col-md-7 col-sm-12 col-12 col-one">
                     <span class="hint-title wow fadeIn">
                         <b>Depoimentos</b>
                     </span>
@@ -331,12 +331,12 @@
     <section class="reserva wow fadeInUp" id="reservas">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-one">
 
                     <div class="card-secondary">
 
                         <div class="row">
-                            <div class="col-7">
+                            <div class="col-lg-7 col-md-7 col-sm-12 col-12">
                                 <span class="hint-title">
                                     <b>Reserva</b>
                                 </span>
@@ -353,7 +353,7 @@
                                 </a>
                             </div>
 
-                            <div class="col-5">
+                            <div class="col-5 no-mobile">
                                 <div class="card-reserva wow fadeIn delay-05s"></div>
                                 <div class="d-flex img-banner wow fadeIn delay-07s">
                                     <img src="./img/icone-reserva.svg" alt="">
@@ -373,15 +373,15 @@
 
             <div class="row">
 
-                <div class="col-3 container-logo-footer wow fadeIn">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 col-one container-logo-footer wow fadeIn">
                     <img class="logo-footer" src="./img/logo.png" alt="">
                 </div>
-                <div class="col-6 container-texto-footer wow fadeIn">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 col-one container-texto-footer wow fadeIn">
                     <p class="mb-0">
                         <b>Meno Online</b> &copy; Todos os direitos reservados
                     </p>
                 </div>
-                <div class="col-3 container-redes-footer">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 col-one container-redes-footer">
                     <a href="https://instagram.com/ve7xm/" target="_blank" class="btn btn-sm btn-white btn-social mr-3 wow fadeIn delay-04s">
                         <i class="fab fa-instagram"></i>
                     </a>
